# arnaud

./: CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yml
app/: manage.py  pyproject.toml
app/apps/blog/: admin.py  feeds.py  models.py  translation.py  urls.py  views.py
app/apps/blog/migrations/: 0001_initial.py  0002_article_slug_en_article_slug_fr.py
app/apps/contact/: admin.py  forms.py  models.py  urls.py  views.py
app/apps/contact/migrations/: 0001_initial.py
app/apps/legal/: urls.py  views.py
app/apps/maketrust/: admin.py  apps.py  findings.py  forms.py  models.py  scoring.py  urls.py  views.py
app/apps/maketrust/migrations/: 0001_initial.py  (+7 more)
app/apps/services/: urls.py  views.py
app/apps/tools/: urls.py  views.py
app/apps/website/: apps.py  middleware.py  sitemaps.py  urls.py  views.py
app/core/: asgi.py  urls.py  wsgi.py
app/core/settings/: base.py  dev.py  prod.py
app/static/: site.webmanifest
app/static/js/: cookie-consent.js
app/tailwind_src/: source.css
app/templates/: base.html  robots.txt
app/templates/cotton/: _button_inner.html  article_card.html  button.html  cta_banner.html  eyebrow.html  faq_item.html  feature_item.html  language_switcher.html  section.html  service_card.html  service_feature.html  service_hero.html  stat_card.html
app/templates/emails/: contact_notification.txt
app/templates/pages/: about.html  contact.html  home.html
app/templates/partials/: contact_form.html  contact_success.html  cookie_consent.html  footer.html  hreflang.html  nav.html
(+55 files in other folders)
