[project]
name = "makeset"
version = "0.1.0"
description = "Makeset.be - Refonte 2026 (Django + cotton + Tailwind 4 + HTMX)"
requires-python = ">=3.13"
dependencies = [
    "django==6.0.4",
    "django-cotton==2.6.2",
    "django-distill==3.2.7",
    "django-modeltranslation==0.20.3",
    "django-meta==2.5.1",
    "django-tailwind-cli==4.4.0",
    "django-environ==0.12.0",
    "django-ratelimit==4.1.0",
    "django-q2==1.10.0",
    "gunicorn==23.0.0",
    "whitenoise==6.10.0",
    "psycopg[binary]==3.2.10",
    "pillow==12.2.0",
    "markdown==3.10",
    "dnspython==2.8.0",
    "idna==3.13",
    "tldextract==5.3.1",
    "requests==2.33.1",
    "cryptography==47.0.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.0.0",
    "ruff==0.14.5",
    "pytest==9.0.1",
    "pytest-django==4.12.0",
    "pytest-cov==7.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
